@@ -2,6 +2,13 @@ CHANGES
 -------
 Version 0.10 : In Progress
 --------------------------
+11/11/2018 Removed the wait argument to TaskGroup.join().  The waiting policy
+           for task groups is specified in the TaskGroup constructor.  For
+           example:
+
+               with TaskGroup(wait=any) as group:
+                    ...
+
 09/05/2018 Tasks submitted to Kernel.run() no longer log exceptions should they
            crash.  Such tasks already return immediately to the caller with the
            exception raised. 
